dark mode pagination problem fix

--- a/assets/scss/components/_analytics.scss
+++ b/assets/scss/components/_analytics.scss
@@ -158,34 +158,36 @@
 			display: none;
 		}
 	}
-	.sc-giIncl {
-		.sc-iJuUWI {
-			padding: 0px;
-			border-radius: 4px;
-			height: 24px;
-			width: 24px;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			margin: 2px;
-			svg {
-				height: 20px;
-				width: 20px;
-				fill: $dark;
-			}
-			&:disabled{
-				svg{
-					fill: $secondary;
-				}
-			}
-			&:hover {
-				background: #0742e7;
-				svg {
-					fill: #fff;
-				}
-			}
-		}
-	}
+    .rdt_Pagination{
+        > div:last-child {
+            button {
+                padding: 0px;
+                border-radius: 4px;
+                height: 24px;
+                width: 24px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 2px;
+                svg {
+                    height: 20px;
+                    width: 20px;
+                    fill: $dark;
+                }
+                &:disabled{
+                    svg{
+                        fill: $secondary;
+                    }
+                }
+                &:hover {
+                    background: #0742e7;
+                    svg {
+                        fill: #fff;
+                    }
+                }
+            }
+        }
+    }
 }
 .react-calendar {
 	border-color: #ebebeb;
