--- a/assets/scss/components/_list-view.scss
+++ b/assets/scss/components/_list-view.scss
@@ -421,8 +421,8 @@
 				display: none;
 			}
 		}
-		.sc-giIncl {
-			.sc-iJuUWI {
+		> div:last-child {
+			button {
 				padding: 0px;
 				border-radius: 4px;
 				height: 24px;
